# tucosto

./: .env  .gitignore  app.py  main.py  pyproject.toml  requirements.txt
services/: google_sheets.py  pdf_report.py
